--- a/eng-web/src/main/webapp/WEB-INF/assets/stylesheets/app.css
+++ b/eng-web/src/main/webapp/WEB-INF/assets/stylesheets/app.css
@@ -23,3 +23,400 @@ th, td {
 	display: inline-block;
 	padding: 5px;
 }
+
+/*Navigation*/
+
+.sidebar-nav {
+	width: 240px;
+	position: absolute;
+	float: left;
+	border-top: none;
+	border-left: none;
+	margin: 0em;
+}
+
+.sidebar-nav ul {
+	list-style: none;
+	padding-left: 0px;
+}
+
+.sidebar-nav li a .fa-caret-right {
+	color: #b4bcc8;;
+	padding-right: .25em;
+}
+
+.sidebar-nav .nav-header {
+	background: #364150;
+	border-left: none;
+	color: #b4bcc8;
+	display: block;
+	font-weight: normal;
+	font-size: 1em;
+	line-height: 2.5em;
+	padding: .25em .25em .25em 1em;
+	margin-bottom: 0px;
+	text-shadow: none;
+	text-transform: none;
+	/*Change the arrow direction if the item is collapsed*/
+}
+
+.sidebar-nav .nav-header .label {
+	float: right;
+	margin-top: .5em;
+	margin-right: .25em;
+	line-height: 1.5em;
+}
+
+.sidebar-nav .nav-header:hover {
+	background: #36c6d3 none repeat scroll 0 0;
+	color: #fff;
+}
+
+.sidebar-nav .nav-header.collapsed .fa-collapse::before {
+	content: "\f078";
+}
+
+.sidebar-nav .nav-header .fa-collapse::before {
+	content: "\f077";
+}
+
+.sidebar-nav .nav-header .fa-collapse,
+.sidebar-nav .nav-header .fa-collapse {
+	float: right;
+}
+
+.sidebar-nav .nav-header .label {
+	float: right;
+	margin-top: .7em;
+	line-height: 1.5em;
+}
+
+.sidebar-nav .nav-header i[class*="fa-"] {
+	line-height: 2.25em;
+	padding-right: .75em;
+}
+
+.sidebar-nav .nav-list {
+	margin: 0px;
+	border: 0px;
+	background: #3A4656;
+	color: #fff;
+}
+
+.sidebar-nav .nav-list> li> a:hover {
+	background: #3E4B5C;
+}
+
+.sidebar-nav .nav-list> .active> a,
+.sidebar-nav .nav-list> .active> a:hover {
+	text-shadow: none;
+	background: #3E4B5C;
+}
+
+.sidebar-nav .nav-list li:first-child.active a {
+	border-top: 0px;
+}
+
+.sidebar-nav .nav-list li:last-child.active a {
+	border-bottom: 0px;
+}
+
+.sidebar-nav .nav-list> li:hover {
+	border-left: 4px solid #36c6d3;
+	overflow: hidden;
+}
+
+.sidebar-nav .nav-list> li:hover a {
+	margin-left: -4px;
+}
+
+.sidebar-nav .nav-list> .active {
+	overflow: hidden;
+	border-left: 4px solid #36c6d3;
+}
+
+.sidebar-nav .nav-list> .active a {
+	margin-left: -4px;
+}
+a{
+	text-decoration: none !important;
+}
+.sidebar-nav .nav-list> .active> a:hover,
+.sidebar-nav .nav > li > a:focus{
+	background: #3E4B5C !important;
+}
+
+.sidebar-nav .nav-list> li> a {
+	color: #b4bcc8;
+	padding: .5em 1em;
+}
+
+.sidebar-nav .nav-list.collapse.in {
+}
+
+
+/*Navbar*/
+
+.navbar-collapse {
+	position: relative;
+	z-index: 9999;
+}
+
+.navbar-default .navbar-nav> li> a:focus {
+	color: #fff;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+	color: #eee;
+	background-color: #eee;
+}
+
+.navbar {
+	-webkit-box-shadow: 0px 0px 3px #cccccc;
+	-moz-box-shadow: 0px 0px 3px #cccccc;
+	box-shadow: 0px 0px 3px #cccccc;
+	padding: 0em 1em;
+	margin: 0px;
+	-webkit-border-radius: 0px;
+	-moz-border-radius: 0px;
+	border-radius: 0px;
+	-moz-background-clip: padding;
+	-webkit-background-clip: padding-box;
+	background-clip: padding-box;
+	border: 0px;
+	border-bottom: none;
+}
+
+.navbar .nav> li> a {
+	color: #b4bcc8;
+	text-shadow: none;
+}
+
+.navbar .nav> li:hover {
+	background-color: #444;
+}
+
+.navbar .nav> li> a:hover {
+	color: #fff;
+}
+
+.navbar .dropdown-menu a:hover {
+	background: none;
+	color: #000;
+}
+
+.navbar .nav li.dropdown.open> .dropdown-toggle {
+	background-color: #444;
+	color: #fff;
+}
+
+.navbafr {
+	position: relative;
+	z-index: 20;
+	margin: 0px;
+	-webkit-box-shadow: 0px 0px 3px #cccccc;
+	-moz-box-shadow: 0px 0px 3px #cccccc;
+	box-shadow: 0px 0px 3px #cccccc;
+	padding: 0em 1em;
+	margin: 0px;
+	-webkit-border-radius: 0px;
+	-moz-border-radius: 0px;
+	border-radius: 0px;
+	-moz-background-clip: padding;
+	-webkit-background-clip: padding-box;
+	background-clip: padding-box;
+	border: 0px;
+	border-bottom: none;
+}
+
+.navbafr .brand {
+	text-shadow: none;
+}
+
+.navbafr .nav {
+	margin-right: -2em;
+}
+
+.navbafr .nav> li> a {
+	color: #fff;
+	text-shadow: none;
+}
+
+.navbafr .nav> li:hover {
+	background-color: #444;
+}
+
+.navbafr .nav> li> a:hover {
+	color: #fff;
+}
+
+.navbafr .dropdown-menu a:hover {
+	background: none;
+	color: #000;
+}
+
+.navbafr .nav li.dropdown.open> .dropdown-toggle {
+	background-color: #444;
+	color: #fff;
+}
+
+.content {
+	position: relative;
+	min-height: 800px;
+	background: #fff;
+	margin-left: 240px;
+	border-left: 1px solid #cccccc;
+	padding: 15px 15px 0px 15px;
+}
+
+.header {
+	background: #fff;
+	border-bottom: 1px solid #cccccc;
+	border-bottom: 1px solid #eee;
+	border-left: 1px solid #ffffff;
+	padding: .5em 0em 1em 0em;
+	margin: 0px 0em 2em 0em;
+}
+
+.header h1 {
+	margin: 0em 0em .5em 0em;
+	padding: 0em;
+	line-height: 1em;
+	font-size: 1.5em;
+	font-weight: normal;
+}
+
+.breadcrumb {
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+	-webkit-border-radius: 0px;
+	-moz-border-radius: 0px;
+	border-radius: 0px;
+	-moz-background-clip: padding;
+	-webkit-background-clip: padding-box;
+	background-clip: padding-box;
+	background: #fff;
+	margin-bottom: .5em;
+	margin-bottom: 0em;
+	padding-left: 0em;
+	padding-right: 0em;
+	font-size: .75em;
+}
+
+.page-content {
+	padding: 1em;
+}
+
+footer {
+	padding: 1em;
+	margin-top: 4em;
+	color: #666;
+	font-size: .85em;
+	line-height: 1.3em;
+	margin: 4em -3px 0em -3px;
+}
+
+footer hr {
+	margin: 2em -2em;
+}
+
+.nav-tabs> li {
+	margin-bottom: -2px;
+}
+
+
+/*Quick Toolbar*/
+
+.btn-toolbar.quick-toolbar {
+	float: right;
+}
+
+.btn-toolbar.quick-toolbar .btn {
+	width: 60px;
+	height: 60px;
+	display: inline-block;
+}
+
+.btn-toolbar.list-toolbar {
+	margin-bottom: 1em;
+}
+
+.stats {
+	float: right;
+}
+
+.stats p.stat {
+	margin: 1em 0em 0em 1em;
+}
+
+.stats .stat {
+	float: left;
+	margin-left: 1em;
+	line-height: 2.5em;
+	font-size: .9em;
+}
+
+.stats .stat .label {
+	font-size: 1em;
+}
+
+.stats .stat .number {
+	font-weight: bold;
+	margin-right: .5em;
+	padding: .5em;
+	border: 1px solid #ccc;
+	background: #eeeeee;
+	background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #e3e3e3), color-stop(1, #ffffff));
+	background: -ms-linear-gradient(bottom, #e3e3e3, #ffffff);
+	background: -moz-linear-gradient(center bottom, #e3e3e3 0%, #ffffff 100%);
+	background: -o-linear-gradient(bottom, #e3e3e3, #ffffff);
+	filter: progid: dximagetransform.microsoft.gradient(startColorStr='#e3e3e3', EndColorStr='#ffffff');
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndColorStr='#e3e3e3')";
+	-webkit-box-shadow: 1px 1px 0px #ffffff;
+	-moz-box-shadow: 1px 1px 0px #ffffff;
+	box-shadow: 1px 1px 0px #ffffff;
+	text-shadow: 1px 1px 1px #fff;
+}
+
+.list-group-item:first-child {
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
+}
+
+.list-group-item:last-child {
+	border-bottom-left-radius: 3px;
+	border-bottom-right-radius: 3px;
+}
+.theme-black,
+.theme-black .navbar {
+	background: #2b3643;
+}
+
+.dialog {
+	margin: 0px auto;
+	margin-top: 5em;
+	float: none;
+	max-width: 400px;
+}
+
+.dialog input[type="checkbox"] {
+	margin: 0px;
+}
+
+.dialog .alert {
+	margin-bottom: 1em;
+}
+
+.dialog form {
+	margin-bottom: 0px;
+}
+
+.dialog .remember-me {
+	padding: .5em 0em 0em 0em;
+}
+.dialog .panel {
+	-webkit-box-shadow: 1px 1px 0px #ffffff;
+	-moz-box-shadow: 1px 1px 0px #ffffff;
+	box-shadow: 1px 1px 0px #ffffff;
+}
